# OpenManus-Max

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PERMISSION_AND_SKILLS.md  README.md  README_ja.md  README_ko.md  README_zh.md  README_zh_TW.md  config.example.toml  main.py  pyproject.toml  requirements.txt  run_flow.py  run_mcp.py
openmanus_max/: __init__.py  cli.py  ipc_server.py
openmanus_max/a2a/: server.py
openmanus_max/agent/: base.py  manus.py  reflect.py  toolcall.py
openmanus_max/core/: config.py  llm.py  logger.py  schema.py
openmanus_max/flow/: dag_scheduler.py
openmanus_max/media/: generator.py
openmanus_max/memory/: hierarchical.py
openmanus_max/sandbox/: executor.py
openmanus_max/scheduler/: cron_scheduler.py  routine_engine.py
openmanus_max/security/: permission.py
openmanus_max/skills/: engine.py
openmanus_max/slides/: generator.py
openmanus_max/tool/: base.py
openmanus_max/tool/builtin/: browser.py  computer_use.py  data_visualization.py  file_editor.py  parallel.py  planning.py  python_execute.py  schedule.py  shell_exec.py  terminate.py  vision.py  web_crawl.py  web_search.py
openmanus_max/tool/mcp/: client.py
openmanus_max/webdev/: scaffold.py
tests/: test_all.py  test_all_v2.py  test_all_v3.py
workspace/: example.txt
