[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmanus-max"
version = "0.2.0"
description = "Advanced Autonomous AI Agent Framework - Enhanced OpenManus with DAG scheduling, hierarchical memory, 18 built-in tools, MCP/A2A protocols"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
search = ["duckduckgo-search>=6.0.0"]
browser = ["playwright>=1.44.0"]
media = ["httpx>=0.27.0"]
viz = ["matplotlib>=3.8.0", "seaborn>=0.13.0"]
crawl = ["beautifulsoup4>=4.12.0", "html2text>=2024.2.0"]
a2a = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
rpa = ["pyautogui>=0.9.54", "Pillow>=10.0.0"]
all = [
    "duckduckgo-search>=6.0.0",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
]

[project.scripts]
openmanus-max = "openmanus_max.cli:main"

[tool.setuptools.packages.find]
include = ["openmanus_max*"]
